fix the problem with button combination click conflict

--- a/style.css
+++ b/style.css
@@ -23,10 +23,12 @@ body{
     height: 300px;
     border-radius: 50%;
     flex-direction: column;
+    position: relative;
 }
 
 .container #screen {
     width: 250px;
+    margin-bottom: 3rem;
     text-align: center;
     line-height: 1.5;
     font-size: 1.5rem;
@@ -35,6 +37,8 @@ body{
 }
 
 .container .controls{
+    position: absolute;
+    bottom: 6.5rem;
     width: 80%;
     height: auto;
     margin-top: 1rem;
@@ -42,11 +46,12 @@ body{
 }
 
 .container button{
-    font-size: 20px;
     border-radius: 6px;
+    padding: .6rem;
 }
 
 .container #reset {
-    margin-top: 10px;
+    position: absolute;
+    bottom: 3rem;
     width: 65%;
 }
