--- a/style.css
+++ b/style.css
@@ -4,8 +4,20 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: Digital;
+    src: url("./digital-7.ttf");
+}
+
+:root{
+    --Digital: 'Digital', 'sans serif';
+    --shadow: 0 0 2px #00ff00, 0 0 2px #00ff00, 0 0 2px #00ff00, 0 0 8px #00ff00;
+}
+
 body{
     height: 100vh;
+    background: #000;
+    font-family: var(--Digital);
 }
 
 .border {
@@ -15,6 +27,7 @@ body{
 .flex{
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -22,23 +35,28 @@ body{
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    flex-direction: column;
+    margin-bottom: 4rem;
     position: relative;
+    border: 1px solid rgb(83, 67, 67 );
+}
+
+.container:hover{
+    box-shadow: var(--shadow);
 }
 
 .container #screen {
     width: 250px;
     margin-bottom: 3rem;
     text-align: center;
-    line-height: 1.5;
-    font-size: 1.5rem;
-    font-family: fantasy;
+    letter-spacing: .5rem;
+    font-size: 3rem;
     color: rgb(36, 155, 36);
 }
 
 .container .controls{
     position: absolute;
-    bottom: 6.5rem;
+    bottom: 6rem;
+    flex-direction: row;
     width: 80%;
     height: auto;
     margin-top: 1rem;
@@ -46,12 +64,43 @@ body{
 }
 
 .container button{
-    border-radius: 6px;
-    padding: .6rem;
+    border-radius: .4rem;
+    color: rgb(36, 155, 36);
+    background: #000;
+    padding: .4rem;
+    font-size: 1.3rem;
+    transition: .3s;
+    border: 1px solid rgb(83, 67, 67 );
+    font-family: var(--Digital);
+}
+
+.container button:hover{
+    box-shadow: var(--shadow);
 }
 
 .container #reset {
     position: absolute;
     bottom: 3rem;
     width: 65%;
+}
+
+.social {
+    width: 400px;
+    height: 100px;
+    flex-direction: row;
+    text-align: center;
+}
+
+.icon {
+    width: 100px;
+}
+
+.fab {
+    color: rgb(83, 67, 67 );
+    font-size: 2rem;
+}
+
+.fab:hover {
+    transition: .8s;
+    text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00, 0 0 50px #00ff00;
 }
