--- a/style.css
+++ b/style.css
@@ -16,12 +16,9 @@
 
 body{
     height: 100vh;
+    color: #249b24;
     background: #000;
     font-family: var(--Digital);
-}
-
-.border {
-    border: 1px solid #000;
 }
 
 .flex{
@@ -31,11 +28,18 @@ body{
     justify-content: center;
 }
 
+p#dateTime{
+    text-align: center;
+    max-width: 300px;
+    padding: .5rem;
+    font-size: 1.2rem;
+}
+
 .container {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    margin-bottom: 4rem;
+    margin: 2rem 0;
     position: relative;
     border: 1px solid rgb(83, 67, 67 );
 }
@@ -50,7 +54,6 @@ body{
     text-align: center;
     letter-spacing: .5rem;
     font-size: 3rem;
-    color: rgb(36, 155, 36);
 }
 
 .container .controls{
@@ -65,7 +68,7 @@ body{
 
 .container button{
     border-radius: .4rem;
-    color: rgb(36, 155, 36);
+    color: #249b24;
     background: #000;
     padding: .4rem;
     font-size: 1.3rem;
@@ -103,4 +106,10 @@ body{
 .fab:hover {
     transition: .8s;
     text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00, 0 0 50px #00ff00;
+}
+
+@media only screen and (max-width: 375px){
+    .social {
+        width: 300px;
+    }
 }
